# libsighandler

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  build.sh
examples/: Makefile  examples.h  many_to_many.c  many_to_one.c  one_to_many.c  sahandler_sigacthandler.c  test1.c
include/: sighandler.h
src/: sighandler.c
